<resources>
    <string name="app_name">EbookApp</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email"> USERNAME</string>
    <string name="prompt_password"> PASSWORD</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="icon_description">Open Book</string>
<<<<<<< Updated upstream
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
=======
    <string name="action_create_account">Create Account</string>
    <string name="create_account">Create\nAccount</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    >>>>>>> Stashed changes
</resources>